--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "babel-loader": "^8.0.5",
     "lodash": "^4.17.11",
     "react": "^16.8.3",
+    "react-audio-player": "^0.11.0",
     "react-contextmenu": "^2.11.0",
     "react-dom": "^16.8.3",
+    "react-player": "^1.11.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
