--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-audio-player": "^0.11.0",
     "react-contextmenu": "^2.11.0",
     "react-dom": "^16.8.3",
+    "react-keyboard-event-handler": "^1.5.0",
     "react-player": "^1.11.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
