--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "aphrodite": "^2.3.1",
     "babel-loader": "^8.0.5",
+    "daterangepicker": "^3.0.5",
     "lodash": "^4.17.11",
-    "react": "^16.8.3",
+    "moment": "^2.24.0",
+    "react": "^16.9.0",
     "react-audio-player": "^0.11.0",
     "react-contextmenu": "^2.11.0",
-    "react-dom": "^16.8.3",
+    "react-dates": "^20.3.0",
+    "react-dom": "^16.9.0",
     "react-keyboard-event-handler": "^1.5.0",
     "react-player": "^1.11.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-with-direction": "^1.3.0",
+    "react-with-styles": "^3.2.3",
+    "react-with-styles-interface-aphrodite": "^5.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
